fix: switching to github.css highlighting to fix contrast errors

--- a/res/site.css
+++ b/res/site.css
@@ -90,31 +90,33 @@
  * Colors
  */
 
-div.language-sh {
-    border-left: solid var(--heavyborder) var(--stamp-green-light);
-    padding-left: var(--mediumborder);
+div.language-sh, div.language-text {
     font-style: italic;
+    border-left: solid var(--heavyborder) var(--stamp-green-light);
+    border-top: solid var(--lightborder) var(--stamp-green-light);
+    border-bottom: solid var(--lightborder) var(--stamp-green-light);
+    padding-left: var(--heavyborder);
 }
 
 div.language-plaintext {
     border-left: solid var(--heavyborder) var(--stamp-red-light);
-    padding-left: var(--mediumborder);
+    border-top: solid var(--lightborder) var(--stamp-red-light);
+    border-bottom: solid var(--lightborder) var(--stamp-red-light);
+    padding-left: var(--heavyborder);
 }
 
 div.language-py {
     border-left: solid var(--heavyborder) var(--stamp-blue-light);
-    padding-left: var(--mediumborder);
+    border-top: solid var(--lightborder) var(--stamp-blue-light);
+    border-bottom: solid var(--lightborder) var(--stamp-blue-light);
+    padding-left: var(--heavyborder);
 }
 
 div.language-sql {
     border-left: solid var(--heavyborder) var(--stamp-blue-light);
-    padding-left: var(--mediumborder);
-}
-
-div.language-txt {
-    border-left: solid var(--heavyborder) var(--stamp-green-light);
-    padding-left: var(--mediumborder);
-    font-style: italic;
+    border-top: solid var(--lightborder) var(--stamp-blue-light);
+    border-bottom: solid var(--lightborder) var(--stamp-blue-light);
+    padding-left: var(--heavyborder);
 }
 
 /*
@@ -157,12 +159,16 @@ footer {
 }
 
 /*
- * Elements
+ * Clear gray background for code samples
  */
 
-section.aside {
-    background-color: var(--lightgray);
+.highlight {
+    background-color: inherit;
 }
+
+/*
+ * Elements
+ */
 
 blockquote {
     padding-left: var(--medium-spacing);
